--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,13 @@
         android:layout_height="320dp" />
 
     <Button
+        android:id="@+id/btnPlayPcmAudio"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/strPlayPcmAudio" />
+
+    <Button
         android:id="@+id/btnAudio"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
