--- a/app/src/main/res/layout/activity_yuv_play.xml
+++ b/app/src/main/res/layout/activity_yuv_play.xml
@@ -43,6 +43,6 @@
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/surfaceView" />
+        app:layout_constraintTop_toBottomOf="@+id/ViewStub4Surface" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
